Cleanup of todos and print statements

--- a/Main.ipynb
+++ b/Main.ipynb
@@ -199,16 +199,16 @@
     "        return x_concepts, x_outputs\n",
     "    \n",
     "    \n",
-    "def majority_class_hackfix(val_idx):\n",
+    "def majority_class_baseline(val_idx):\n",
     "    print(\"start validation baseline: \", datetime.now())\n",
-    "    val_loader = DataLoader(\n",
+    "    majority_loader = DataLoader(\n",
     "        dataset=derm7pt,\n",
     "        batch_size=999999,\n",
     "        sampler=torch.utils.data.SubsetRandomSampler(val_idx),\n",
     "    )\n",
-    "    for i, batch in enumerate(val_loader, 0):\n",
+    "    for i, batch in enumerate(majority_loader, 0):\n",
     "        inputs, labels, concept_labels = batch\n",
-    "        baseline, simple_val_baseline = majority_class_baseline(labels)\n",
+    "        baseline, simple_val_baseline = majority_class_accuracy_by_labels(labels)\n",
     "        \n",
     "        #concept baseline\n",
     "        concept_baseline = 0\n",
@@ -218,7 +218,7 @@
     "        print(\"end validation baseline:   \", datetime.now(), \", baseline: \", baseline, \" percent \",  simple_val_baseline, \" concept_baseline: \", concept_baseline, \" concept_val_baseline: \", concept_val_baseline)\n",
     "        return simple_val_baseline, concept_val_baseline\n",
     "    \n",
-    "def majority_class_baseline(true_labels):\n",
+    "def majority_class_accuracy_by_labels(true_labels):\n",
     "    # Find the most frequent class in the training set\n",
     "    elems, counts = true_labels.unique(return_counts=True)\n",
     "    majority_count = counts[counts.argmax()]\n",
@@ -379,9 +379,8 @@
     "# Training loop\n",
     "kf = KFold(n_splits=n_folds, shuffle=True)\n",
     "for fold, (train_idx, val_idx) in enumerate(kf.split(derm7pt.metadata)):\n",
-    "    #Todo Hackfix to get the majority class of the validation set\n",
-    "    simple_val_baseline, concept_val_baseline = majority_class_hackfix(val_idx)      \n",
-    "    print(simple_val_baseline, concept_val_baseline)\n",
+    "    #get the majority class of the validation set\n",
+    "    simple_val_baseline, concept_val_baseline = majority_class_baseline(val_idx)      \n",
     "    \n",
     "    train_loader = DataLoader(\n",
     "        dataset=derm7pt,\n",
@@ -406,7 +405,7 @@
     "        model.train()\n",
     "        for i, batch in enumerate(train_loader, 0):\n",
     "            inputs, labels, concept_labels = batch\n",
-    "            #ToDo one hot encoding in Dataloader\n",
+    "            #one hot encoding of the label\n",
     "            labels = torch.eye(num_classes)[labels.squeeze().int()]\n",
     "            inputs, labels, concept_labels = inputs.to(device), labels.to(device), concept_labels.to(device)\n",
     "    \n",
@@ -448,11 +447,6 @@
     "        wandb.log({\"loss\": running_loss, \"concept_loss:\": running_loss_concepts, \"validation_accuracy\": val_accuracy, \"concept_val_accuracy\": concept_val_accuracy})\n",
     "        print('[%d, %5d] loss: %.4f, val_accuracy: %.4f, simple_baseline: %.4f, concept_0_baseline: %.4f' % (epoch + 1, i + 1, running_loss, val_accuracy, simple_val_baseline, concept_val_baseline))   \n",
     "        \n",
-    "        #ToDo early stopping\n",
-    "        # if running_loss < 0.001:\n",
-    "        #     print(\"Early stopping!\")\n",
-    "        #     break\n",
-    "        # \n",
     "    #ToDo only one fold for now\n",
     "    break\n",
     "\n",
