Code cleaning Documenting derm7pt_data

--- a/Main.ipynb
+++ b/Main.ipynb
@@ -13,8 +13,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-10T17:19:44.012384Z",
-     "start_time": "2024-11-10T17:19:35.908041Z"
+     "end_time": "2024-11-11T17:47:46.095335Z",
+     "start_time": "2024-11-11T17:47:39.099023Z"
     }
    },
    "cell_type": "code",
@@ -42,8 +42,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-10T17:19:44.255744Z",
-     "start_time": "2024-11-10T17:19:44.204343Z"
+     "end_time": "2024-11-11T17:47:46.167519Z",
+     "start_time": "2024-11-11T17:47:46.102316Z"
     }
    },
    "cell_type": "code",
@@ -79,8 +79,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-10T17:19:44.288711Z",
-     "start_time": "2024-11-10T17:19:44.277076Z"
+     "end_time": "2024-11-11T17:47:46.410682Z",
+     "start_time": "2024-11-11T17:47:46.399047Z"
     }
    },
    "cell_type": "code",
@@ -120,13 +120,13 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-10T17:19:44.323764Z",
-     "start_time": "2024-11-10T17:19:44.312180Z"
+     "end_time": "2024-11-11T17:47:46.450211Z",
+     "start_time": "2024-11-11T17:47:46.437820Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "#Help functions to calculate the majority class baseline\n",
+    "#Help functions to calculate the baseline for both train and validation\n",
     "def majority_class_baseline(val_idx, mode_txt=\"\"):\n",
     "    print(\"start \", mode_txt, \" baseline: \", datetime.now())\n",
     "    majority_loader = DataLoader(\n",
@@ -168,8 +168,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-10T17:19:51.330975Z",
-     "start_time": "2024-11-10T17:19:44.348185Z"
+     "end_time": "2024-11-11T17:47:51.332312Z",
+     "start_time": "2024-11-11T17:47:46.479304Z"
     }
    },
    "cell_type": "code",
@@ -180,14 +180,15 @@
     "learning_rate = 0.0002\n",
     "n_folds = 8\n",
     "batch_size = 8\n",
-    "learn_concepts = True   #Defines if loss should be calculated for concepts\n",
+    "learn_concepts = True   # Defines if loss should be calculated for concepts\n",
     "\n",
     "num_classes = derm7pt.diagnosis_mapping[derm7pt.model_columns[\"label\"]].nunique()\n",
     "num_concepts = len(derm7pt.concepts_mapping)\n",
+    "# Loss functions\n",
     "criterion_concept = nn.BCELoss()\n",
     "criterion = nn.CrossEntropyLoss() #Categorical crossEntropyLoss\n",
     "\n",
-    "#split up init form main training loop, because of faulty display of print statements during training\n",
+    "#split up init from main training loop, because of faulty display during training\n",
     "wandb.init(\n",
     "    # set the wandb project where this run will be logged\n",
     "    project= \"PracticalWork\",\n",
@@ -237,7 +238,7 @@
        "<IPython.core.display.HTML object>"
       ],
       "text/html": [
-       "Run data is saved locally in <code>C:\\Users\\Exodus\\OneDrive\\OneDrive - Johannes Kepler Universität Linz\\5th Semester\\Practical Work in AI\\PW_ConceptModels\\wandb\\run-20241110_181949-s9k914uk</code>"
+       "Run data is saved locally in <code>C:\\Users\\Exodus\\OneDrive\\OneDrive - Johannes Kepler Universität Linz\\5th Semester\\Practical Work in AI\\PW_ConceptModels\\wandb\\run-20241111_184749-ampy75wp</code>"
       ]
      },
      "metadata": {},
@@ -249,7 +250,7 @@
        "<IPython.core.display.HTML object>"
       ],
       "text/html": [
-       "Syncing run <strong><a href='https://wandb.ai/nlp_ass3/PracticalWork/runs/s9k914uk' target=\"_blank\">run2024-11-10 18:19:44.356165</a></strong> to <a href='https://wandb.ai/nlp_ass3/PracticalWork' target=\"_blank\">Weights & Biases</a> (<a href='https://wandb.me/run' target=\"_blank\">docs</a>)<br/>"
+       "Syncing run <strong><a href='https://wandb.ai/nlp_ass3/PracticalWork/runs/ampy75wp' target=\"_blank\">run2024-11-11 18:47:46.485287</a></strong> to <a href='https://wandb.ai/nlp_ass3/PracticalWork' target=\"_blank\">Weights & Biases</a> (<a href='https://wandb.me/run' target=\"_blank\">docs</a>)<br/>"
       ]
      },
      "metadata": {},
@@ -273,7 +274,7 @@
        "<IPython.core.display.HTML object>"
       ],
       "text/html": [
-       " View run at <a href='https://wandb.ai/nlp_ass3/PracticalWork/runs/s9k914uk' target=\"_blank\">https://wandb.ai/nlp_ass3/PracticalWork/runs/s9k914uk</a>"
+       " View run at <a href='https://wandb.ai/nlp_ass3/PracticalWork/runs/ampy75wp' target=\"_blank\">https://wandb.ai/nlp_ass3/PracticalWork/runs/ampy75wp</a>"
       ]
      },
      "metadata": {},
@@ -282,10 +283,10 @@
     {
      "data": {
       "text/html": [
-       "<button onClick=\"this.nextSibling.style.display='block';this.style.display='none';\">Display W&B run</button><iframe src='https://wandb.ai/nlp_ass3/PracticalWork/runs/s9k914uk?jupyter=true' style='border:none;width:100%;height:420px;display:none;'></iframe>"
+       "<button onClick=\"this.nextSibling.style.display='block';this.style.display='none';\">Display W&B run</button><iframe src='https://wandb.ai/nlp_ass3/PracticalWork/runs/ampy75wp?jupyter=true' style='border:none;width:100%;height:420px;display:none;'></iframe>"
       ],
       "text/plain": [
-       "<wandb.sdk.wandb_run.Run at 0x21388adcad0>"
+       "<wandb.sdk.wandb_run.Run at 0x2636155f5c0>"
       ]
      },
      "execution_count": 5,
@@ -297,11 +298,9 @@
   },
   {
    "metadata": {
-    "jupyter": {
-     "is_executing": true
-    },
     "ExecuteTime": {
-     "start_time": "2024-11-10T17:19:51.356437Z"
+     "end_time": "2024-11-11T17:56:32.717650Z",
+     "start_time": "2024-11-11T17:47:51.385843Z"
     }
    },
    "cell_type": "code",
@@ -311,9 +310,10 @@
     "for fold, (train_idx, val_idx) in enumerate(kf.split(derm7pt.metadata)):\n",
     "    #get the majority class of the validation and test set \n",
     "    simple_val_baseline, concept_val_baseline = majority_class_baseline(val_idx, \"validation\") \n",
-    "    #left out for performance reasons\n",
+    "    #left out train_baseline for performance reasons\n",
     "    #simple_train_baseline, concept_train_baseline = majority_class_baseline(train_idx, \"train\")\n",
     "    \n",
+    "    # Data loader train and validation\n",
     "    train_loader = DataLoader(\n",
     "        dataset=derm7pt,\n",
     "        batch_size=batch_size,\n",
@@ -330,6 +330,7 @@
     "    model.to(device)\n",
     "    optimizer = optim.Adam(model.parameters(), lr=learning_rate)\n",
     "    \n",
+    "    # Training loop for one fold\n",
     "    for epoch in range(n_epochs):\n",
     "        running_loss = 0.0\n",
     "        running_loss_concepts = 0.0\n",
@@ -348,6 +349,7 @@
     "            # forward pass for both concepts and outputs\n",
     "            concept_outputs, outputs = model(inputs)\n",
     "            if learn_concepts:\n",
+    "                # calculate loss for concepts\n",
     "                loss_concepts = criterion_concept(concept_outputs, concept_labels)\n",
     "                loss_concepts.backward(retain_graph=True)\n",
     "                # statistics: average loss\n",
@@ -364,10 +366,8 @@
     "            # train accuracy\n",
     "            _, predicted = torch.max(outputs, 1)\n",
     "            train_total_correct += (predicted == hot_labels.argmax(dim=1)).sum().item()\n",
-    "            #if i%80 == 0:\n",
-    "                #print(\"i \", i, predicted, \"\\n\", labels, \"\\n\", outputs)\n",
     "            \n",
-    "            \n",
+    "        # statistics: average loss over all folds    \n",
     "        running_loss /= (i+1)    \n",
     "        running_loss_concepts /= (i+1)\n",
     "        train_accuracy = train_total_correct / len(train_idx)\n",
@@ -390,6 +390,7 @@
     "                concept_correct += (concept_outputs.round() == concept_labels).sum().item()\n",
     "        val_accuracy = correct/total\n",
     "        concept_val_accuracy = concept_correct/(total*num_concepts)\n",
+    "        # Logging\n",
     "        wandb.log({\"loss\": running_loss, \"train_accuracy\": train_accuracy, \"concept_loss:\": running_loss_concepts, \"concept_train_accuracy\": concept_train_accuracy, \"validation_accuracy\": val_accuracy, \"concept_validation_accuracy\": concept_val_accuracy})\n",
     "        print('[%d, %3d] loss: %.4f, val_accuracy: %.4f, time: %s' % (epoch + 1, i + 1, running_loss, val_accuracy, datetime.now().strftime('%Y-%m-%d %H:%M:%S')))\n",
     "\n",
@@ -405,19 +406,33 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "start  validation  baseline:  2024-11-10 18:19:51.369403\n",
-      "end  validation  baseline:    2024-11-10 18:19:55.334148 , baseline:  tensor(1)  percent  tensor(0.5984)  concept_baseline:  0  concept_ validation _baseline:  0.7716535433070866\n",
-      "[1,  16] loss: 1.6237, val_accuracy: 0.0315, time: 2024-11-10 18:23:43\n",
-      "[2,  16] loss: 1.6161, val_accuracy: 0.2205, time: 2024-11-10 18:27:20\n"
+      "start  validation  baseline:  2024-11-11 18:47:51.403795\n",
+      "end  validation  baseline:    2024-11-11 18:47:54.693482 , baseline:  tensor(1)  percent  tensor(0.5984)  concept_baseline:  0  concept_ validation _baseline:  0.7716535433070866\n",
+      "[1,  16] loss: 1.6237, val_accuracy: 0.0315, time: 2024-11-11 18:52:26\n",
+      "[2,  16] loss: 1.6161, val_accuracy: 0.2205, time: 2024-11-11 18:56:24\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mKeyboardInterrupt\u001B[0m                         Traceback (most recent call last)",
+      "Cell \u001B[1;32mIn[6], line 47\u001B[0m\n\u001B[0;32m     44\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m learn_concepts:\n\u001B[0;32m     45\u001B[0m     \u001B[38;5;66;03m# calculate loss for concepts\u001B[39;00m\n\u001B[0;32m     46\u001B[0m     loss_concepts \u001B[38;5;241m=\u001B[39m criterion_concept(concept_outputs, concept_labels)\n\u001B[1;32m---> 47\u001B[0m     \u001B[43mloss_concepts\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mbackward\u001B[49m\u001B[43m(\u001B[49m\u001B[43mretain_graph\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[38;5;28;43;01mTrue\u001B[39;49;00m\u001B[43m)\u001B[49m\n\u001B[0;32m     48\u001B[0m     \u001B[38;5;66;03m# statistics: average loss\u001B[39;00m\n\u001B[0;32m     49\u001B[0m     running_loss_concepts \u001B[38;5;241m+\u001B[39m\u001B[38;5;241m=\u001B[39m loss_concepts\u001B[38;5;241m.\u001B[39mitem()\n",
+      "File \u001B[1;32mE:\\Software\\Python\\Lib\\site-packages\\torch\\_tensor.py:525\u001B[0m, in \u001B[0;36mTensor.backward\u001B[1;34m(self, gradient, retain_graph, create_graph, inputs)\u001B[0m\n\u001B[0;32m    515\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m has_torch_function_unary(\u001B[38;5;28mself\u001B[39m):\n\u001B[0;32m    516\u001B[0m     \u001B[38;5;28;01mreturn\u001B[39;00m handle_torch_function(\n\u001B[0;32m    517\u001B[0m         Tensor\u001B[38;5;241m.\u001B[39mbackward,\n\u001B[0;32m    518\u001B[0m         (\u001B[38;5;28mself\u001B[39m,),\n\u001B[1;32m   (...)\u001B[0m\n\u001B[0;32m    523\u001B[0m         inputs\u001B[38;5;241m=\u001B[39minputs,\n\u001B[0;32m    524\u001B[0m     )\n\u001B[1;32m--> 525\u001B[0m \u001B[43mtorch\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mautograd\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mbackward\u001B[49m\u001B[43m(\u001B[49m\n\u001B[0;32m    526\u001B[0m \u001B[43m    \u001B[49m\u001B[38;5;28;43mself\u001B[39;49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mgradient\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mretain_graph\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mcreate_graph\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43minputs\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43minputs\u001B[49m\n\u001B[0;32m    527\u001B[0m \u001B[43m\u001B[49m\u001B[43m)\u001B[49m\n",
+      "File \u001B[1;32mE:\\Software\\Python\\Lib\\site-packages\\torch\\autograd\\__init__.py:267\u001B[0m, in \u001B[0;36mbackward\u001B[1;34m(tensors, grad_tensors, retain_graph, create_graph, grad_variables, inputs)\u001B[0m\n\u001B[0;32m    262\u001B[0m     retain_graph \u001B[38;5;241m=\u001B[39m create_graph\n\u001B[0;32m    264\u001B[0m \u001B[38;5;66;03m# The reason we repeat the same comment below is that\u001B[39;00m\n\u001B[0;32m    265\u001B[0m \u001B[38;5;66;03m# some Python versions print out the first line of a multi-line function\u001B[39;00m\n\u001B[0;32m    266\u001B[0m \u001B[38;5;66;03m# calls in the traceback and some print out the last line\u001B[39;00m\n\u001B[1;32m--> 267\u001B[0m \u001B[43m_engine_run_backward\u001B[49m\u001B[43m(\u001B[49m\n\u001B[0;32m    268\u001B[0m \u001B[43m    \u001B[49m\u001B[43mtensors\u001B[49m\u001B[43m,\u001B[49m\n\u001B[0;32m    269\u001B[0m \u001B[43m    \u001B[49m\u001B[43mgrad_tensors_\u001B[49m\u001B[43m,\u001B[49m\n\u001B[0;32m    270\u001B[0m \u001B[43m    \u001B[49m\u001B[43mretain_graph\u001B[49m\u001B[43m,\u001B[49m\n\u001B[0;32m    271\u001B[0m \u001B[43m    \u001B[49m\u001B[43mcreate_graph\u001B[49m\u001B[43m,\u001B[49m\n\u001B[0;32m    272\u001B[0m \u001B[43m    \u001B[49m\u001B[43minputs\u001B[49m\u001B[43m,\u001B[49m\n\u001B[0;32m    273\u001B[0m \u001B[43m    \u001B[49m\u001B[43mallow_unreachable\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[38;5;28;43;01mTrue\u001B[39;49;00m\u001B[43m,\u001B[49m\n\u001B[0;32m    274\u001B[0m \u001B[43m    \u001B[49m\u001B[43maccumulate_grad\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[38;5;28;43;01mTrue\u001B[39;49;00m\u001B[43m,\u001B[49m\n\u001B[0;32m    275\u001B[0m \u001B[43m\u001B[49m\u001B[43m)\u001B[49m\n",
+      "File \u001B[1;32mE:\\Software\\Python\\Lib\\site-packages\\torch\\autograd\\graph.py:744\u001B[0m, in \u001B[0;36m_engine_run_backward\u001B[1;34m(t_outputs, *args, **kwargs)\u001B[0m\n\u001B[0;32m    742\u001B[0m     unregister_hooks \u001B[38;5;241m=\u001B[39m _register_logging_hooks_on_whole_graph(t_outputs)\n\u001B[0;32m    743\u001B[0m \u001B[38;5;28;01mtry\u001B[39;00m:\n\u001B[1;32m--> 744\u001B[0m     \u001B[38;5;28;01mreturn\u001B[39;00m \u001B[43mVariable\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43m_execution_engine\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mrun_backward\u001B[49m\u001B[43m(\u001B[49m\u001B[43m  \u001B[49m\u001B[38;5;66;43;03m# Calls into the C++ engine to run the backward pass\u001B[39;49;00m\n\u001B[0;32m    745\u001B[0m \u001B[43m        \u001B[49m\u001B[43mt_outputs\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;241;43m*\u001B[39;49m\u001B[43margs\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;241;43m*\u001B[39;49m\u001B[38;5;241;43m*\u001B[39;49m\u001B[43mkwargs\u001B[49m\n\u001B[0;32m    746\u001B[0m \u001B[43m    \u001B[49m\u001B[43m)\u001B[49m  \u001B[38;5;66;03m# Calls into the C++ engine to run the backward pass\u001B[39;00m\n\u001B[0;32m    747\u001B[0m \u001B[38;5;28;01mfinally\u001B[39;00m:\n\u001B[0;32m    748\u001B[0m     \u001B[38;5;28;01mif\u001B[39;00m attach_logging_hooks:\n",
+      "\u001B[1;31mKeyboardInterrupt\u001B[0m: "
      ]
     }
    ],
-   "execution_count": null
+   "execution_count": 6
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-10T17:12:48.206279700Z",
+     "end_time": "2024-11-11T17:56:32.798331100Z",
      "start_time": "2024-08-21T18:33:45.404346Z"
     }
    },
